# openauth-rs

./: .gitignore  .worktreeinclude  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PORTING.md  README.md  RELEASE.md  docker-compose.yml  lefthook.yml  pnpm-lock.yaml  pnpm-workspace.yaml  release-plz.toml  skills-lock.json
crates/openauth/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-plugins/: CHANGELOG.md  Cargo.toml  README.md  UPSTREAM.md
crates/openauth-plugins/src/: lib.rs
crates/openauth-plugins/src/access/: mod.rs
crates/openauth-plugins/src/additional_fields/: mod.rs
crates/openauth-plugins/src/admin/: cookies.rs  mod.rs  openapi.rs  routes.rs
crates/openauth-plugins/src/anonymous/: mod.rs
crates/openauth-plugins/src/api_key/: mod.rs  options.rs  schema.rs
crates/openauth-plugins/src/bearer/: mod.rs
crates/openauth-plugins/src/captcha/: mod.rs
crates/openauth-plugins/src/custom_session/: mod.rs
crates/openauth-plugins/src/device_authorization/: mod.rs  options.rs  schema.rs  store.rs
crates/openauth-plugins/src/email_otp/: change_email.rs  endpoints.rs  helpers.rs  hooks.rs  mod.rs  otp.rs  password.rs  registry.rs  server.rs  types.rs
crates/openauth-plugins/src/generic_oauth/: config.rs  mod.rs  provider.rs  route_support.rs  routes.rs
crates/openauth-plugins/src/haveibeenpwned/: checker.rs  mod.rs  options.rs  plugin.rs
crates/openauth-plugins/src/jwt/: mod.rs  options.rs  schema.rs
crates/openauth-plugins/src/last_login_method/: cookie.rs  mod.rs
crates/openauth-plugins/src/magic_link/: endpoints.rs  mod.rs
crates/openauth-plugins/src/mcp/: authorize.rs  metadata.rs  mod.rs  register.rs  schema.rs  session.rs  shared.rs  token.rs
crates/openauth-plugins/src/multi_session/: cookies.rs  endpoints.rs  hooks.rs  mod.rs  options.rs
crates/openauth-plugins/src/oauth_proxy/: endpoint.rs  hooks.rs  mod.rs  payload.rs  utils.rs
crates/openauth-plugins/src/oidc_provider/: mod.rs
crates/openauth-plugins/src/one_tap/: endpoint.rs  mod.rs
crates/openauth-plugins/src/one_time_token/: mod.rs
crates/openauth-plugins/src/open_api/: mod.rs
crates/openauth-plugins/src/organization/: additional_fields.rs  errors.rs  hooks.rs  http.rs  limits.rs  mod.rs  models.rs  options.rs  permissions.rs  provisioning.rs  record.rs  schema.rs  store.rs
crates/openauth-plugins/src/phone_number/: mod.rs  options.rs  schema.rs
crates/openauth-plugins/src/siwe/: mod.rs  schema.rs  store.rs
crates/openauth-plugins/src/test_utils/: mod.rs
crates/openauth-plugins/src/two_factor/: flow.rs  mod.rs  options.rs  otp.rs  otp_routes.rs  otp_storage.rs  schema.rs  store.rs
crates/openauth-plugins/src/username/: mod.rs  options.rs  schema.rs
crates/openauth-plugins/tests/: plugins.rs
crates/openauth/src/: auth.rs  lib.rs  prelude.rs
crates/openauth/tests/: adapter_database_hooks.rs  builder_plugins.rs  docs.rs  public_api.rs
examples/full-app/: Cargo.toml  README.md  docker-compose.yml
examples/full-app/src/: lib.rs  main.rs  seed.rs
examples/full-app/tests/: smoke.rs
(+1024 files in other folders)
