[package]
name = "openauth-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/openauth-plugins"
readme = "../../README.md"
description = "Official OpenAuth plugin modules."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
openauth-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
http.workspace = true
time.workspace = true
tokio.workspace = true

[lints]
workspace = true
