[package]
name = "openauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
description = "Rust authentication toolkit."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
http.workspace = true
openauth-core.workspace = true
openauth-plugins = { workspace = true, optional = true }
openauth-telemetry.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
default = []
plugins = ["dep:openauth-plugins"]

[dev-dependencies]
openauth-sqlx.workspace = true
sqlx.workspace = true

[lints]
workspace = true
